# RunRate

./: .replit  main.py  pyproject.toml  replit.nix
.streamlit/: config.toml
assets/: default_categories.json
utils/: budget_manager.py  category_manager.py  data_processor.py  ml_categorizer.py  visualizations.py
